fixing accidental clipping of dropdown. oops

--- a/app/assets/stylesheets/temp.css.scss
+++ b/app/assets/stylesheets/temp.css.scss
@@ -62,8 +62,6 @@ p{margin:0;}
 .f{height:160px; display: table-cell; vertical-align: bottom; text-align: center; width:200px; line-height: 0; position: relative;}
 
 .game-meta{
-  position: relative;
-  overflow: hidden;
 }
    
 .p h1{font:bold normal .875em sans-serif; color:#078; margin:.5em 0 .3em; height:2.3em; overflow: hidden; text-shadow: none;}
